Release v0.0.4 Fixed form center align

--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
 html {
   height: 100%;
   min-height:100%;
+  padding: 0;
+  margin: 0;
 }
 body {
   background-image: url("img/Wallpaper.png");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
+
+
   height: 100%;
   min-height: 100%;
   position: fixed;
@@ -15,6 +19,7 @@ body {
   flex-direction: column;
   align-items: center;
   padding: 0;
+  margin: 0;
 }
 
 .header {
@@ -37,6 +42,8 @@ body {
   align-items: center;
   width: 600px;
   height: 409px;
+  margin-left: 0;
+  margin-right: 0;
   border-radius: 8px;
   box-shadow: 0 2px 16px 0 rgba(0, 0, 0, 0.15);
   background: #ffffff;
